Remove boilerplate from annotation